# TDD-Coding-Harness

./: .dockerignore  .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  README.md  REFLECTION.md  app.py  config.yaml  pyproject.toml  requirements.txt  temp.md  vercel.json
.claude/: T10T12T13T14.md  T11T16.md  T17.md  T18T19.md  T20T21.md  T3T4T6.md  T5T7T8T9.md  fix-ci-path.md  fix-demo-path.md  fixer.md
.claude/pr-descriptions/: pr-feedback.md  pr-guardrail.md  pr-loop.md  pr-provider-layer.md  pr-tools.md
.github/workflows/: ci.yml
docs/: AGENT_LOG.md  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md
examples/: __init__.py  demo_autonomous_repair.py  demo_feedback.py  demo_guardrail.py
plan/: workflow.md
src/: __init__.py
src/feedback/: analyzer.py  engine.py  strategies.py
src/harness/: __init__.py  cli.py  config.py  context.py  credential_manager.py  guardrail.py  loop.py  memory.py  models.py  stop_condition.py
src/providers/: base.py  factory.py  mock.py  openai_compat.py
src/tests/: test_analyzer.py  test_cli.py  test_config.py  test_context.py  test_credential_manager.py  test_feedback_engine.py  test_guardrail.py  test_loop.py  test_loop_integration.py  test_memory.py  test_models.py  test_providers.py  test_stop_condition.py  test_tools.py
src/tools/: base.py  dispatcher.py  read_file.py  run_shell.py  write_file.py
tests/: test_src_suite.py
webui/: Dockerfile  app.py  requirements.txt
webui/templates/: index.html
workspace/: README.md  fib.py  log.txt  test_api.py
workspace/fib/: test_fib.py
workspace/gcd/: gcd.py  log.txt  test_gcd.py
