[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdd-harness"
version = "0.1.0"
description = "TDD Coding Harness — AI-Enabled Software Engineer Bootcamp Final Project"
requires-python = ">=3.12"
authors = [
    { name = "AI4SE Student" },
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tdd-harness = "harness.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["harness", "tools", "providers", "feedback", "tests"]