[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdd-harness"
version = "0.1.0"
description = "TDD Coding Harness — AI-Enabled Software Engineer Bootcamp Final Project"
requires-python = ">=3.12"
authors = [
    { name = "AI4SE Student" },
]
dependencies = [
    "pydantic>=2.0",
    "typer>=0.9",
    "pyyaml>=6.0",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "keyring>=24.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[project.scripts]
tdd-harness = "harness.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["harness", "tools", "providers", "feedback", "tests"]

[tool.pytest.ini_options]
addopts = "--basetemp=.pytest_tmp"
testpaths = ["src/tests"]

[tool.vercel]
entrypoint = "app:app"
